@@ -111,4 +111,12 @@ public interface GatewayConfig {
 
   int getThreadPoolMax();
 
+  int getHttpServerRequestBuffer();
+
+  int getHttpServerRequestHeaderBuffer();
+
+  int getHttpServerResponseBuffer();
+
+  int getHttpServerResponseHeaderBuffer();
+
 }
